# dpanalib

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
dpanalib/ic/: ic_definition.py  ic_loader.py
examples/: GAL16V8.toml  GAL16V8_eprom_01.toml  GAL22V10.toml  GAL22V10_PLCC.toml  P5C060.toml  P5C090.toml  PAL10x8.toml  PAL12x6.toml  PAL16L8.toml  PAL16R4.toml  PAL16R6.toml  PAL20L8.toml
tests/: conftest.py  test_ic_definition.py  test_toml_generation.py
