[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dpanalib"
version = "0.0.1"
description = "Library with some utility code for the dppeeper and associated tools"
authors = [
   { name = "Fabio Battaglia", email = "hkzlabnet@gmail.com" }
]
keywords = ["dupico", "DuPAL", "dumping"]
readme = "README.md"
license = { text = "CC BY-SA 4.0 DEED" }
classifiers = [
    "Programming Language :: Python :: 3"
]
requires-python = ">=3.12"
dependencies = []

[tool.setuptools]
packages = [
    "dpanalib",
    "dpanalib.ic"
 ]
py-modules = [ "__init__" ]

[project.urls]
repository = "https://github.com/DuPAL-PAL-DUmper/dpanalib"